# SigMacro

./: .gitignore  LICENSE  README.md  git_add.sh
PySigMacro/: README.md  TODO.md  dev.py  pyplotject.toml  pytest.ini  run_tests.bat  run_tests.ps1  run_tests.sh  setup.cfg  setup.py
PySigMacro/dev/: dev.py  dev_manual_.py  dev_v05.py
PySigMacro/examples/: 00_run_macro.py  01_create_notebook.py  02_create_and_fill_worksheet.py  advanced_plots.py  basic_plots.py  demo.py  demo_plotter.py  demo_v01.py  dev.py  dev_v01.py  dev_v02.py  dev_v03.py  dev_v04_importing_succeed.py  dev_v05.py  run_examples.sh  run_macro.py  run_macro_dynamic.py  run_macros.py  set_labels.py
PySigMacro/src/pysigmacro/: __init__.py  instruction.md
PySigMacro/src/pysigmacro/com/: README.md  _AccessTracker.py  _BaseCOMWrapper.py  _GraphItemWrapper.py  _GraphPageWrapper.py  _GraphPagesWrapper.py  _GraphWrapper.py  _GraphsWrapper.py  _MacroItemWrapper.py  _NotebookItemsWrapper.py  _NotebookWrapper.py  _NotebooksWrapper.py  _PlotsWrapper.py  _WorksheetItemWrapper.py  (+4 more)
PySigMacro/tests/core/: test_connection.py  test_notebook.py  test_sections.py
PySigMacro/tests/data/: _test_column_names.py  _test_data_generation.py
PySigMacro/tests/plot/: _test_area_plot.py  _test_bar_plot.py  _test_histogram_plot.py  _test_line_plot.py  _test_line_with_interval.py  _test_scatter_plot.py
PySigMacro/tests/ui/: _test_colors.py  _test_fonts.py  _test_legend.py  _test_spines.py  _test_ticks.py  _test_title.py  _test_xlabel.py  _test_ylabel.py
PySigMacro/tests/vba/: _Test_VBAFileManager.py  _Test_VBALibrary.py
(+171 files in other folders)
