[metadata]
name = pysigmacro
version = 0.1.0
author = Yusuke Watanabe
author_email = ywatanabe@u-tokyo.ac.jp
description = Python library for controlling SigmaPlot software via COM automation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/pysigmacro
project_urls =
    Bug Tracker = https://github.com/yourusername/pysigmacro/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pywin32>=228
    numpy>=1.19.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sigmaplot-example = sigmaplot.examples.basic_plots:main
